--- a/ProjectAnimes.API/ProjectAnimes.API.csproj
+++ b/ProjectAnimes.API/ProjectAnimes.API.csproj
@@ -7,11 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\ProjectAnimes.Application\ProjectAnimes.Application.csproj" />
+    <ProjectReference Include="..\ProjectAnimes.Infra.Ioc\ProjectAnimes.Infra.Ioc.csproj" />
   </ItemGroup>
 
 </Project>
